2004-02-08  Andy Wingo  <wingo@pobox.com>

	* Makefile.am: Reverted to my local copy.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gw-ui-spec.scm: New file.

	* gw-gnome-spec.scm: New file.

	* gw-canvas-spec.scm: New file.

	* Makefile.am: Add bindings for libgnomecanvas, libgnomeui, and
	libgnome.

2003-12-13  Andreas Rottmann  <a.rottmann@gmx.at>

	* gw-canvas-spec.scm, gw-ui-spec.scm, gw-canvas-spec.scm: Use
	gw-standard instead of guile-gnome-gw-standard.
	
2003-11-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* gw-vte-spec.scm, gw-source-view-spec.scm: Use gw-standard
	instead of guile-gnome-gw-standard.

	* Makefile.am: 'make distcheck' fixes.

2003-10-16  Andy Wingo  <wingo@pobox.com>

	* gnome/Makefile.am: New file.

	* gw-vte-spec.scm: New file, wraps vte.

	* ChangeLog: New file.
	
