@@ -1,3 +1,8 @@
+2004-07-01  Andy Wingo  <wingo@pobox.com>
+
+	* gtksourceview-spec.scm (<gnome-source-view-wrapset>): Fix for
+	depends-on!.
+
 2004-02-08  Andy Wingo  <wingo@pobox.com>
 
 	* Makefile.am: Reverted to my local copy.
